world and national pages built to match newwire page

--- a/app/views/nytimes_top_stories_nation/index.html.erb
+++ b/app/views/nytimes_top_stories_nation/index.html.erb
@@ -1,9 +1,9 @@
-<section class="top-stories-nation-page">
+<section class="top-nation-page">
   <div class="row">
     <div class="large-12 large-centered columns">
       <h1>Top National Stories</h1>
     </div>
   </div>
 
-  <div id="top-stories-nation-articles"></div>
+  <div id="top-nation-stories"></div>
 </section>
