--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -19,8 +19,8 @@
 /*Custom CSS*/
 /*NewsWire Page*/
 .newswire-page {
-    background-color: grey;
-}
+     background-color: grey;
+ }
 
 .article-title {
     background-color: #FF7706;
@@ -70,67 +70,100 @@
     margin: 0 0 0 0;
 }
 
-/*Top Stories - Business Page*/
-.top-stories-business-page {
+/*Top World Stories*/
+.top-world-page {
     background-color: grey;
 }
 
-.top-stories-business-title {
+.world-article-title {
     background-color: #1749BD;
+    margin: 0 0 0 0;
+    padding-left: 15px;
+    padding-right: 15px;
+
 }
 
-.top-stories-business-byline {
+.world-article-byline {
     background-color: #3B64C3;
+    margin: 0 0 0 0;
+
 }
 
-.top-stories-business-section {
+.world-article-section{
     background-color: #3B64C3;
+    margin: 0 0 0 0;
+
 }
 
-.top-stories-business-abstract {
+.world-article-abstract{
     background-color: #5F81CF;
+    margin: 0 0 0 0;
 }
 
-/*Top Stories - National Page*/
-.top-stories-nation-page {
-    background-color: grey;
+.world-article-image {
+    background-color: #3B64C3;
+    margin-top: 0;
+    margin-bottom: 0;
+    padding: 15px 15px 15px 15px;
+    text-align: center;
+    vertical-align: middle;
 }
 
-.top-stories-nation-title {
+.world-article-map {
     background-color: #1749BD;
+    margin-top: 0;
+    margin-bottom: 25px;
+    padding: 15px 15px 15px 15px;
+    text-align: center;
+    vertical-align: middle;
 }
 
-.top-stories-nation-byline {
-    background-color: #3B64C3;
-}
-
-.top-stories-nation-section {
-    background-color: #3B64C3;
-}
-
-.top-stories-nation-abstract {
-    background-color: #5F81CF;
-}
-
-/*Top Stories - World Page*/
-.top-stories-world-page {
+/*Top Nation Stories*/
+.top-nation-page {
     background-color: grey;
 }
 
-.top-stories-world-title {
+.nation-article-title {
     background-color: #AA3939;
+    margin: 0 0 0 0;
+    padding-left: 15px;
+    padding-right: 15px;
+
 }
 
-.top-stories-world-byline {
+.nation-article-byline {
     background-color: #D46A6A;
+    margin: 0 0 0 0;
+
 }
 
-.top-stories-world-section {
+.nation-article-section{
     background-color: #D46A6A;
+    margin: 0 0 0 0;
+
 }
 
-.top-stories-world-abstract {
+.nation-article-abstract{
     background-color: #FFAAAA;
+    margin: 0 0 0 0;
+}
+
+.nation-article-image {
+    background-color: #D46A6A;
+    margin-top: 0;
+    margin-bottom: 0;
+    padding: 15px 15px 15px 15px;
+    text-align: center;
+    vertical-align: middle;
+}
+
+.nation-article-map {
+    background-color: #AA3939;
+    margin-top: 0;
+    margin-bottom: 25px;
+    padding: 15px 15px 15px 15px;
+    text-align: center;
+    vertical-align: middle;
 }
 
 /*Top Stories - Politics Page*/
