--- a/app/views/nytimes_top_stories_technology/index.html.erb
+++ b/app/views/nytimes_top_stories_technology/index.html.erb
@@ -1,9 +1,9 @@
-<section class="top-stories-technology-page">
+<section class="top-technology-page">
   <div class="row">
     <div class="large-12 large-centered columns">
       <h1>Top Technology Stories</h1>
     </div>
   </div>
 
-  <div id="top-stories-technology-articles"></div>
+  <div id="top-technology-stories"></div>
 </section>
