--- a/app/views/nytimes_top_stories_world/index.html.erb
+++ b/app/views/nytimes_top_stories_world/index.html.erb
@@ -1,4 +1,4 @@
-<section class="top-stories-world-page">
+<section class="top-world-page">
   <div class="row">
     <div class="large-12 large-centered columns">
       <h1>Top World Stories</h1>
