--- a/app/assets/javascripts/scratch.js.erb
+++ b/app/assets/javascripts/scratch.js.erb
@@ -1,51 +1,51 @@
 //$(document).ready(function(){
-//    getNationArticles();
-//    fetchNationArticlesButton()
+//    getTechnologyArticles();
+//    fetchTechnologyArticlesButton()
 //});
 //
-//function fetchNationArticlesButton() {
-//    $("#fetch-newswire-articles").on("click", function() {
-//        getNationArticles()
+//function fetchTechnologyArticlesButton() {
+//    $("#fetch-technology-articles").on("click", function() {
+//        getNewswireArticles()
 //    })
 //}
 //
-//function getNationArticles() {
+//function getTechnologyArticles() {
 //    $.ajax({
 //        type: "GET",
-//        url: "http://api.nytimes.com/svc/topstories/v1/national.json?api-key=<%= ENV["nytimes_top_stories_api_key"]  %>",
+//        url: "http://api.nytimes.com/svc/topstories/v1/technology.json?api-key=<%= ENV["nytimes_top_stories_api_key"]  %>",
 //        success: function(articles){
 //            var stories = articles.results;
 //            $.each(stories, function(index, story){
 //                var newArticleDate        = story.created_date;
-//                var lastArticleDate = $(".top-stories-nation-articles").last().data("created-date");
+//                var lastArticleDate = $(".top-stories-technology-articles").last().data("created_date");
 //
-//                if (lastArticleDate === undefined || lastArticleDate > newArticleDate) {
-//                    renderNationStory(story)
+//                if (lastArticleDate === undefined || lastArticleDate < newArticleDate) {
+//                    renderTechnologyStory(story)
 //                }
 //            })
 //        }
 //    })
 //}
 //
-//function renderNationStory(story) {
-//    $("#top-stories-nation-articles").append(
-//            "<div class='top-stories-nation-articles' data-created-date='"+story.created_date+"'>"
+//function renderTechnologyStory(story) {
+//    $("#top-stories-technology-articles").append(
+//            "<div class='top-stories-technology-articles'>"
 //            +"<div class='row'>"
-//            +"<div class='medium-12 columns top-stories-nation-title'>"
+//            +"<div class='medium-12 columns top-stories-technology-title'>"
 //            +"<h4>"+story.title+"</h4>"
 //            +"<h6>"+new Date(story.created_date)+"</h6>"
 //            +"</div>"
 //            +"</div>"
 //            +"<div class='row'>"
-//            +"<div class='medium-6 columns top-stories-nation-byline'>"
+//            +"<div class='medium-6 columns top-stories-technology-byline'>"
 //            +"<p>"+story.byline+"</p>"
 //            +"</div>"
-//            +"<div class='medium-6 columns top-stories-nation-section'>"
+//            +"<div class='medium-6 columns top-stories-technology-section'>"
 //            +"<p>"+story.section+"</p>"
 //            +"</div>"
 //            +"</div>"
 //            +"<div class='row'>"
-//            +"<div class='medium-12 columns top-stories-nation-abstract'>"
+//            +"<div class='medium-12 columns top-stories-technology-abstract'>"
 //            +"<p>"+story.abstract+"</p>"
 //            +"</div>"
 //            +"</div>"
