--- a/app/views/nytimes_top_stories_politic/index.html.erb
+++ b/app/views/nytimes_top_stories_politic/index.html.erb
@@ -1,9 +1,9 @@
-<section class="top-stories-politics-page">
+<section class="top-politic-page">
   <div class="row">
     <div class="large-12 large-centered columns">
       <h1>Top Political Stories</h1>
     </div>
   </div>
 
-  <div id="top-stories-politics-articles"></div>
+  <div id="top-politic-stories"></div>
 </section>
