--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -262,6 +262,56 @@
     vertical-align: middle;
 }
 
+/*Top Business Stories*/
+.top-business-page {
+    background-color: grey;
+}
+
+.business-article-title {
+    background-color: #672770;
+    margin: 0 0 0 0;
+    padding-left: 15px;
+    padding-right: 15px;
+
+}
+
+.business-article-byline {
+    background-color: #83478B;
+    margin: 0 0 0 0;
+
+}
+
+.business-article-section{
+    background-color: #83478B;
+    margin: 0 0 0 0;
+
+}
+
+.business-article-abstract{
+    background-color: #A071A7;
+    margin: 0 0 0 0;
+}
+
+.business-article-image {
+    background-color: #83478B;
+    margin-top: 0;
+    margin-bottom: 0;
+    padding: 15px 15px 15px 15px;
+    text-align: center;
+    vertical-align: middle;
+}
+
+.business-article-map {
+    background-color: #672770;
+    margin-top: 0;
+    margin-bottom: 25px;
+    padding: 15px 15px 15px 15px;
+    text-align: center;
+    vertical-align: middle;
+}
+
+
+
 /*Article Search Page*/
 .article-search-page {
     background-color: darkgray;
