--- a/app/views/nytimes_top_stories_business/index.html.erb
+++ b/app/views/nytimes_top_stories_business/index.html.erb
@@ -1,10 +1,9 @@
-<section class="top-stories-business-page">
+<section class="top-business-page">
   <div class="row">
     <div class="large-12 large-centered columns">
       <h1>Top Business Stories</h1>
-        <button id='fetch-business-articles' class='button'>Fetch</button>
     </div>
   </div>
 
-  <div id="top-stories-business-articles"></div>
+  <div id="top-business-stories"></div>
 </section>
